/*
 * To change this license header, choose License Headers in Project Properties.
 * To change this template file, choose Tools | Templates
 * and open the template in the editor.
 */
package pt.isep.nsheets.shared.lapr4.blue.s3.ipc.n1090657.ipc;

import java.io.Serializable;

/**
 *
 * @author Raúl Correia <1090657@isep.ipp.pt>
 */
public enum AccessType implements Serializable {
    READ_WRITE, READ_ONLY, VIEW_ONLY
}
